# baibai

./: .env  .env.development  .eslintrc.js  .gitignore  .lintstagedrc  .prettierrc  Cargo.toml  README.md  cypress.config.ts  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.js  tsconfig.base.json  tsconfig.json  vite.config.ts
core/: Cargo.toml
core/locales/: en.yml  zh-CN.yml
core/src/: lib.rs  storage.rs
core/tests/: integration_test.rs
core/tests/common/: mod.rs
crates/mysql-driver/: Cargo.toml
crates/mysql-driver/src/: lib.rs
crates/plugin/: Cargo.toml
crates/plugin/src/: lib.rs  manager.rs  security.rs
crates/sqlite-driver/: Cargo.toml
crates/sqlite-driver/src/: lib.rs
cypress/components/: ThemeSwitch.cy.tsx
cypress/e2e/: database-connection.cy.ts
cypress/support/: e2e.ts
e2e/: playwright.config.ts
e2e/fixtures/: connections.json
e2e/tests/core/: query.spec.ts
plugins/demo/: Cargo.toml  manifest.json
plugins/mysql/: manifest.json
servers/: .eslintrc.js  nest-cli.json  next.config.ts  package.json
src/: App.tsx  main.ts
src-tauri/: tauri.conf.json
src/components/: ConnectionTree.tsx  LocaleSwitch.tsx  ThemeSwitch.tsx
src/i18n/: index.ts
src/router/: index.ts
src/stores/: theme.ts
src/styles/: base.css
src/theme/: index.ts
src/types/: router.d.ts
ui/: index.html  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
ui/src/: App.ts  App.tsx  components.d.ts  main.tsx
ui/src-tauri/: Cargo.toml  tauri.conf.json
(+94 files in other folders)
