[workspace]
members = [
    "core",
    "ui/src-tauri"
]

resolver = "2"

[workspace.dependencies]
tauri = { version = "2.0.0-beta", features = [
    "default",
    "custom-protocol",
    "native-tls"
] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8.2", features = ["mysql", "runtime-tokio"] } 
