[package]
name = "baibai-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri.workspace = true
serde.workspace = true
tokio.workspace = true
sqlx.workspace = true
rust-i18n = "3.1.2"
once_cell = "1.18"
tauri-plugin-sql = { version = "2.2.0", features = ["sqlite"] } 

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
env_logger = "0.11.5" 